Seems like the file INSTALL doesn't exist
In the master (https://github.com/ds26gte/pregexp) branch, there is not INSTALL file but there is an INSTALL.adoc file, which seems to serve the same purpose.

--- a/pregexp/index.html
+++ b/pregexp/index.html
@@ -62,7 +62,7 @@ your Scheme.
 (Alternatively, if your dialect allows it, you can
 install <code class=verbatim>pregexp</code> as a <em>module</em> — consult
 the file
-<a href="https://github.com/ds26gte/pregexp/blob/master/INSTALL">INSTALL</a> in the distribution.)</p>
+<a href="https://github.com/ds26gte/pregexp/blob/master/INSTALL.adoc">INSTALL</a> in the distribution.)</p>
 <p>
 
 The file <code class=verbatim>pregexp.lisp</code> is the Common Lisp version
